[package]
name = "notification_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {features = ["rt-multi-thread", "macros"]}
tokio-cron-scheduler = "*"
chrono = "*"
tracing = "*"
anyhow = "*"
tracing-subscriber = "0.3.16"
time = "*"