[package]
name = "notification_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {features = ["rt-multi-thread", "macros"]}
tokio-cron-scheduler = "*"
chrono = "*"
tracing = "*"
anyhow = "*"
tracing-subscriber = "0.3.16"
time = "*"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]